--- a/episodes/001.md
+++ b/episodes/001.md
@@ -1,7 +1,15 @@
 
+# 001
+
+2億光年離れた宇宙の果てで一人ぼっち。思わずくしゃみをした。すると一人のおばさんがやってきて非常識だと怒鳴った。
+
+<br.
+
+この物語はフィクションです。
+
 <br>
 <br>
 
-(c) 2019 jamcha (jamcha.aa@gmail.com).
+(c) 2020 jamcha (jamcha.aa@gmail.com).
 
 ![cc by-nc-sa](https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png)
